# unwrapped

./: .gitignore  FINDINGS.md  README.md  model_results.csv  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
scripts/: demo_analysis.py  demo_cleaning.py  demo_hit_shape.py  demo_json_loading.py  demo_preference.py  demo_summary.py  demo_validation.py  demo_visualization.py  group3_model_comparison.py
src/unwrapped/: __init__.py  analysis.py  clean.py  clustering.py  constants.py  feature_impact.py  genre_classifier.py  hit_shape_predictor.py  io.py  popularity.py  popularity_pipeline.py  preference.py  summary.py  validation.py  visualization.py
tests/: test_analysis.py  test_clean.py  test_clustering.py  test_feature_impact.py  test_genre_classifier.py  test_hit_shape_predictor.py  test_io.py  test_popularity.py  test_preference.py  test_summary.py  test_validation.py  test_visualization.py
