[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unwrapped"
version = "0.1.0"
description = "Python package using Spotify data for STAT 3250 final project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy<2.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "catboost>=1.2",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
